public/styles/styles.css
/* ... */
.tools-table {
    background-color: #1b1e24;
    border-collapse: collapse;
    color: #a8a8a8;
    height: 40%;
    left: 10%;
    margin: 45px auto 30px;
    width: 70%;
}

.tools-table tr {
    background-color: #2f343a;
}

.tools-table td {
    border: 4px solid #1b1e24;
    font-size: 19px;
    font-weight: 500;
    padding: 20px;
    text-align: left;
}

@media only screen and (max-width: 700px) {
    .tools-table {
        width: 85%;
    }
    .tools-table td {
        font-size: 14px;
        padding: 12px;
    }
}

/*
 ================
   FOOTER UTILS
 ================
*/

.footer-utils {
    background: #31353d;
    border: none;
    border-radius: 5px 0 0 0;
    bottom: 0;
    color: whitesmoke;
    font-size: 18px;
    height: 32px;
    margin: 0;
    position: fixed;
    right: 0;
    text-align: center;
    width: 64px;
}

#show-shortcuts {
    background: #31353d;
    border: none;
    border-radius: 0;
    bottom: 0;
    color: whitesmoke;
    font-size: 18px;
    height: 32px;
    margin: 0;
    position: fixed;
    right: 0;
    text-align: center;
    width: 32px;
}

#scroll-to-top {
    background: #31353d;
    border: none;
    border-radius: 5px 0 0 0;
    bottom: 0;
    color: whitesmoke;
    font-size: 18px;
    height: 32px;
    margin: 0;
    position: fixed;
    right: 32px;
    text-align: center;
    width: 32px;
}

#show-shortcuts:hover,
#scroll-to-top:hover {
    background: #2b2e35;
    color: dimgray;
}

@media only screen and (max-width: 600px) {
    .footer-utils {
        width: 32px;
    }
    #show-shortcuts {
        display: none;
    }
    #scroll-to-top {
        right: 0;
    }
}

#shortcuts {
    background-color: #00000066;
    display: block;
    height: 100%;
    left: 0;
    overflow: auto;
    padding-top: 200px;
    position: fixed;
    top: 0;
    width: 100%;
    z-index: 5000;
}

#shortcuts-content {
    -webkit-animation-duration: 0.4s;
    animation-duration: 0.4s;
    -webkit-animation-name: animate-top;
    animation-name: animate-top;
    background-color: #1e2529;
    border: 3px solid #31353d;
    border-radius: 5px;
    box-shadow: 0 4px 8px 0 #00000033, 0 6px 20px 0 #00000030;
    margin: auto;
    min-width: 300px;
    padding: 0;
    position: relative;
    width: 30%;
}

@-webkit-keyframes animate-top {
    from {
        opacity: 0;
        top: -300px;
    }
    to {
        opacity: 1;
        top: 0;
    }
}

@keyframes animate-top {
    from {
        opacity: 0;
        top: -300px;
    }
    to {
        opacity: 1;
        top: 0;
    }
}

#shortcuts.animate-out-top {
    -webkit-animation-direction: reverse;
    animation-direction: reverse;
    -webkit-animation-duration: 0.3s;
    animation-duration: 0.3s;
    -webkit-animation-name: animate-top;
    animation-name: animate-top;
    background: none;
}

#shortcuts-header {
    background-color: #1e2529;
    color: whitesmoke;
    font-size: 22px;
    padding: 5px 15px;
}

#close-shortcuts {
    color: whitesmoke;
    cursor: pointer;
    font-size: 28px;
    font-weight: bold;
    position: absolute;
    right: 10px;
    top: 0;
}

#close-shortcuts:hover,
#close-shortcuts:focus {
    color: dimgray;
    text-decoration: none;
}

#shortcuts-list {
    background-color: #1e2529;
    color: whitesmoke;
    font-size: 18px;
    line-height: 150%;
    padding: 15px;
}

/*
 ================
      TOOLS
 ================
*/

.toolbox {
    background-color: #1f2229;
    border: 2px solid gray;
    color: gray;
    font-weight: 500;
    margin: 140px auto 0;
    max-width: 95%;
    padding: 10px 30px 20px 30px;
    text-align: left;
    width: 95%;
}

@media only screen and (max-width: 700px) {
    .toolbox {
        max-width: 85%;
        padding: 10px 8px 10px 15px;
    }
}

.tooltext {
    color: #145791;
    font-size: 20px;
    font-weight: 700;
    line-height: 200%;
}

@media only screen and (max-width: 700px) {
    .tooltext {
        font-size: 16px;
    }
}

.info-table {
    background-color: #31363d;
    border-collapse: collapse;
    color: #a8a8a8;
    margin: 50px auto 30px;
    overflow-y: scroll;
    position: static;
    width: 70%;
}

@media only screen and (max-width: 700px) {
    .info-table {
        display: inline-block;
        margin: 8px auto 30px;
        min-width: 97%;
    }
}

.info-table th {
    background-color: #292d33;
    border: 4px solid #1b1e24;
    font-size: 18px;
    padding: 10px;
    text-align: center;
}

@media only screen and (max-width: 700px) {
    .info-table th {
        font-size: 14px;
        padding: 20px;
    }
}

.info-table td {
    border: 4px solid #1b1e24;
    font-size: 18px;
    font-weight: 500;
    padding: 20px;
    text-align: left;
}

@media only screen and (max-width: 700px) {
    .info-table td {
        font-size: 16px;
        padding: 14px;
    }
}

.basic-grid {
    display: grid;
    gap: 10px;
    grid-template-columns: repeat(auto-fill, minmax(var(--min-width, 400px), 1fr));
}

.basic-grid div {
    margin-top: 15px;
}

.toc {
    background-color: #1f2229;
    border: 2px solid gray;
    color: gray;
    font-size: 18px;
    font-weight: 600;
    line-height: 150%;
    margin: 140px 0 0 40px;
    max-width: 75%;
    padding: 15px 30px 20px;
    position: static;
    text-align: left;
    width: 290px;
}

@media only screen and (max-width: 700px) {
    .toc {
        max-width: 70%;
    }
}

.error-title {
    color: #ff5555;
    display: block;
    font-size: 500%;
    font-weight: 600;
    padding-top: 120px;
    text-align: center;
}

.error-warning {
    color: lightgray;
    font-size: 20px;
    font-weight: 500;
    line-height: 150%;
    margin-top: 10px;
    text-align: center;
}

.error-link {
    color: #28497d;
    font-size: 20px;
    font-weight: 500;
    text-align: center;
}

.error-link:hover {
    color: #1d3d70;
}
/* ... */

